--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     <div class="measure-btn" id="measure-btn">Measure Distance</div>
     <div id="map"></div>
     <div id="cesiumContainer"></div>
-    <script type="module" src="./Ol_Cesium/Mesure.js"></script>
+    <script type="module" src="./Ol_Cesium/script.js"></script>
 </body>
 </html>
