--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>OpenLayers and Cesium</title>
+    <title>MR Jarar</title>
     <link rel="stylesheet" href="./lib/v6.5.0-dist/ol.css">
     <script src="./lib/v6.5.0-dist/ol.js"></script>
     <script src="https://cesium.com/downloads/cesiumjs/releases/1.117/Build/Cesium/Cesium.js"></script>
